--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "laravel-echo": "^1.10.0",
         "pluralize": "^8.0.0",
+        "pusher-js": "^7.0.3",
         "vuex": "^3.6.2"
     }
 }
