--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2",
         "highlight.js": "^10.6.0",
         "laravel-echo": "^1.10.0",
         "marked": "^2.0.1",
