--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "marked": "^2.0.1",
         "pluralize": "^8.0.0",
         "pusher-js": "^7.0.3",
+        "toastr": "^2.1.4",
+        "vue-textarea-autosize": "^1.1.1",
         "vuex": "^3.6.2"
     }
 }
