--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "pluralize": "^8.0.0",
         "pusher-js": "^7.0.3",
         "toastr": "^2.1.4",
+        "vue-router": "^3.5.1",
         "vue-textarea-autosize": "^1.1.1",
         "vuex": "^3.6.2"
     }
