--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "highlight.js": "^10.6.0",
         "laravel-echo": "^1.10.0",
         "marked": "^2.0.1",
+        "nprogress": "^0.2.0",
         "pluralize": "^8.0.0",
         "pusher-js": "^7.0.3",
         "toastr": "^2.1.4",
+        "vue-observe-visibility": "^1.0.0",
         "vue-router": "^3.5.1",
         "vue-textarea-autosize": "^1.1.1",
         "vuex": "^3.6.2"
