--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.2",
+        "dayjs": "^1.10.4",
         "highlight.js": "^10.6.0",
         "laravel-echo": "^1.10.0",
         "marked": "^2.0.1",
