--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .:/var/www/html
       - ./.docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     ports:
-      -  6001:6001
+      - "6001:6001"
       - "9000:9000"
     networks:
       - app-network
@@ -40,6 +40,7 @@ services:
     tty: true
     volumes:
       - ./.docker/dbdata:/var/lib/mysql
+      - ./.docker/mysql/my.cnf:/etc/mysql/my.cnf
     ports:
       - "3306:3306"
     environment:
@@ -51,8 +52,8 @@ services:
       SERVICE_NAME: mysql
     networks:
       - app-network
-  
-  phpmyadmin: 
+
+  phpmyadmin:
     image: phpmyadmin/phpmyadmin
     restart: always
     container_name: phpmyadmin
